<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">movies-feature</string>
    <string name="unknow_error">Erro Desconhecido!</string>
    <string name="release_date">Data de Lançamento:</string>
    <string name="genres">Gêneros:</string>

    <string name="content_desc_favorite">Botão para acessar favoritos</string>
    <string name="content_desc_poster">Poster do Filme</string>
    <string name="content_desc_backdrop">Backdrop do Filme</string>

    <string name="top_app_bar_home_title">Filmes em Cartaz</string>
    <string name="top_app_bar_favorite_title">Favoritos</string>

    <string name="api_error_message_1">Hmm… Algo deu errado!</string>
    <string name="api_error_message_2">Tente Novamente :D</string>
</resources>