<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.home.presentation.ui.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tabHomeFrag"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:title="@string/top_app_bar_home_title"
            app:menu="@menu/top_app_bar_home_menu"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:nestedScrollingEnabled="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomeFragNowPlaying"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/now_playing_item"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:orientation="vertical"
                tools:spanCount="2"
                />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gpHomeFragLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="vHomeFragBackgroud, pbHomeFragLoading"
                android:visibility="gone"
                />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gpHomeFragError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="vHomeFragBackgroud, tvHomeFragTextError1, tvHomeFragTextError2, btHomeFragRetry"
                android:visibility="gone"
                />

            <View
                android:id="@+id/vHomeFragBackgroud"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ProgressBar
                android:id="@+id/pbHomeFragLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvHomeFragTextError1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_error_message_1"
                style="@style/DefaultTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.4"
                />

            <TextView
                android:id="@+id/tvHomeFragTextError2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_error_message_2"
                style="@style/DefaultTextView"
                app:layout_constraintTop_toBottomOf="@id/tvHomeFragTextError1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:id="@+id/btHomeFragRetry"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_default"
                android:elevation="@dimen/button_retry_elevation"
                android:background="@drawable/ic_reload"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tvHomeFragTextError2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>