<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".feature.detail.presentation.ui.DetailFragment">

    <FrameLayout
        android:id="@+id/flDetailFragLoading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDetailFragError"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            />

        <TextView
            android:id="@+id/tvDetailFragTextError1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_error_message_1"
            style="@style/DefaultTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.4"
            />

        <TextView
            android:id="@+id/tvDetailFragTextError2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_error_message_2"
            style="@style/DefaultTextView"
            app:layout_constraintTop_toBottomOf="@id/tvDetailFragTextError1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/btDetailFragRetry"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_default"
            android:elevation="@dimen/button_retry_elevation"
            android:background="@drawable/ic_reload"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvDetailFragTextError2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_backdrop"
        android:background="@color/black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/black"
            app:statusBarScrim="@color/black">

            <ImageView
                android:id="@+id/ivDetailFragPoster"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_backdrop"
                tools:src="@drawable/backdrop_example"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_shape"
                />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tapDetailFragAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:navigationIcon="@drawable/ic_back"
                app:navigationIconTint="@color/white"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/btDetailFragFavorite"
                android:layout_width="@dimen/like_icon_size"
                android:layout_height="@dimen/like_icon_size"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                app:lottie_colorFilter="@color/white"
                app:lottie_rawRes="@raw/like_anim"
                app:lottie_loop="false"
                app:lottie_autoPlay="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                tools:text="Velozes e Furiosos: 9"
                style="@style/TitleTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btDetailFragFavorite"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/ivDetailFragStarsIcon"
                android:importantForAccessibility="no"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_default"
                android:src="@drawable/ic_star"
                app:tint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tvDetailFragTitle"
                app:layout_constraintStart_toStartOf="@id/tvDetailFragTitle"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                tools:text="8.2 Stars"
                style="@style/InfoTextView"
                app:layout_constraintTop_toTopOf="@id/ivDetailFragStarsIcon"
                app:layout_constraintBottom_toBottomOf="@id/ivDetailFragStarsIcon"
                app:layout_constraintStart_toEndOf="@id/ivDetailFragStarsIcon"
                />

            <ImageView
                android:id="@+id/ivDetailFragViewsIcon"
                android:importantForAccessibility="no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:src="@drawable/ic_views"
                app:tint="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@id/tvDetailFragStars"
                app:layout_constraintTop_toTopOf="@id/tvDetailFragStars"
                app:layout_constraintBottom_toBottomOf="@id/tvDetailFragStars"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                tools:text="10.000 Views"
                style="@style/InfoTextView"
                app:layout_constraintTop_toTopOf="@id/ivDetailFragViewsIcon"
                app:layout_constraintBottom_toBottomOf="@id/ivDetailFragViewsIcon"
                app:layout_constraintStart_toEndOf="@id/ivDetailFragViewsIcon"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                tools:text="Dominic Toretto e sua família precisam enfrentar o seu irmão mais novo Jakob, um assassino mortal que está trabalhando com uma antiga inimiga, a cyber-terrorista Cipher."
                style="@style/InfoTextView"
                app:layout_constraintTop_toBottomOf="@id/ivDetailFragViewsIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/release_date"
                style="@style/DetailsTextView"
                app:layout_constraintTop_toBottomOf="@id/tvDetailFragOverview"
                app:layout_constraintStart_toStartOf="@id/tvDetailFragOverview"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="12/12/2021"
                style="@style/DetailsTextView"
                app:layout_constraintTop_toTopOf="@id/tvDetailFragRelease"
                app:layout_constraintBottom_toBottomOf="@id/tvDetailFragRelease"
                app:layout_constraintStart_toEndOf="@id/tvDetailFragRelease"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/genres"
                style="@style/DetailsTextView"
                app:layout_constraintTop_toBottomOf="@id/tvDetailFragRelease"
                app:layout_constraintStart_toStartOf="@id/tvDetailFragRelease"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailFragGenresList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="Ação, Aventura, Ficção Científica"
                style="@style/DetailsTextView"
                app:layout_constraintTop_toTopOf="@id/tvDetailFragGenres"
                app:layout_constraintBottom_toBottomOf="@id/tvDetailFragGenres"
                app:layout_constraintStart_toEndOf="@id/tvDetailFragGenres"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetailsFragSimilarMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@id/tvDetailFragGenresList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/similar_movie_item"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>